--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Odd Duck</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <hi>Odd Duck Survey</hi>
-    </header>
-    <section>
-        <img>
-        <img>
-        <img>
-    </section>
-    <main>
-<div id="content-container">
-
-</div>
-<div id="results-container">
-</div>
-
-<div id="gallery"></div>
-    </main>
-
-    <footer>
-        <script type="text/javasript" src="track.js"></script>
-    </footer>
-    </body>
-</html>
+<html!DOCTYPE html>
+  <html lang="en">
+  <head>
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Odd Duck Products</title>
+     <link rel="reset" href="reset.css">
+     <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+     <h1>Odd Duck Product Co.</h1>
+     <br>
+     <h2>
+         What is our Next Big product? You Choose!
+     </h2>
+     <section id="image-selection">
+         <img>
+         <img>
+         <img>
+     </section>
+     <br>
+     <br>
+     <button id="results-button">View Results</button>
+        
+     <section id="results-table">
+     </section>
+   
+  
+  <footer></footer>
+  <script src="track.js"></script>
+</body>
+  
+  </html>
+  
+ 
