added chart, need finish button

--- a/index.html
+++ b/index.html
@@ -7,30 +7,47 @@
      <title>Odd Duck Products</title>
      <link rel="reset" href="reset.css">
      <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js" integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    </head>
+<body>
      <h1>Odd Duck Product Co.</h1>
      <br>
      <h2>
-         What is our Next Big product? You Choose!
+         What is our Next Big product? Please Click!
      </h2>
      <section id="image-selection">
          <img>
          <img>
          <img>
      </section>
-     <br>
-     <br>
-     <button id="results-button">View Results</button>
-        
-     <section id="results-table">
-     </section>
-   
-  
-  <footer></footer>
-  <script src="track.js"></script>
+    <section id="results-table">
+    </section>
+
+    <canvas id="my-chart" width="300" height="300">
+
+    </canvas>
+
+    <script src="track.js"></script>
 </body>
-  
-  </html>
-  
- 
+</html>
+
+
+
+
+
+
+
+
+
+     <!-- 
+      
+
+
+
+
+
+
+
+
+
+      -->
