added button and css

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
          What is our Next Big product? Please Click!
      </h2>
      <section id="image-selection">
-         <img>
-         <img>
-         <img>
+         <img ids>
+         <img id>
+         <img id>
      </section>
     <section id="results-table">
     </section>
-
+<button type="button" name="name-button" id="results-button"
+hidden>View Results Here!</button>
     <canvas id="my-chart" width="300" height="300">
 
     </canvas>
@@ -39,7 +40,7 @@
 
 
 
-     <!-- 
+   
       
 
 
@@ -50,4 +51,4 @@
 
 
 
-      -->
+  
