work on storage

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
          What is our Next Big product? Please Click!
      </h2>
      <section id="image-selection">
-         <img ids>
-         <img id>
-         <img id>
+         <img>
+         <img>
+         <img>
      </section>
     <section id="results-table">
     </section>
@@ -27,6 +27,10 @@ hidden>View Results Here!</button>
     <canvas id="my-chart" width="300" height="300">
 
     </canvas>
+
+    <div>
+        <button type="button" name="nuke-button" id="nuke-button" hidden> Clear Results Here!</button>
+    </div>
 
     <script src="track.js"></script>
 </body>
