another try json

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
      </section>
     <section id="results-table">
     </section>
-<button type="button" name="name-button" id="results-button"
-hidden>View Results Here!</button>
-    <canvas id="my-chart" width="300" height="300">
+<button type="button" name="name-button" id="results-button" hidden>View Results Here!</button>
+    <canvas id="my-chart" width="300" height="300"></canvas>
+    <div>
+        <button type="button"  name="storage-button" id="storage-button" hidden>Clear Results</button>
+    </div>
 
-    </canvas>
 
 
     <script src="track.js"></script>
